# jason-coaching-hub

./: .gitignore  .vercelignore  AGENTS_SDK_COMPARISON.md  AGENT_UPGRADE_ANALYSIS.md  CHANGELOG.md  CHATKIT_FIX_ACTION_PLAN.md  CHATKIT_IMPLEMENTATION_ANALYSIS.md  CHATKIT_UI_COMPARISON.md  CHATKIT_UPGRADE_GUIDE.md  CHATKIT_UPGRADE_PLAN.md  CHATKIT_UPGRADE_SUMMARY.md  CHAT_HISTORY_CHANGES.md  CITATION_MARKERS_BUG_REPORT.md  CODEBASE_SUMMARY.md  COPY_PASTE_IMPROVEMENTS.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  ENVIRONMENT_VARIABLES.md  FILE_UPLOAD_GUIDE.md  IMPROVEMENTS_IMPLEMENTED.md  KNOWLEDGE_ASSISTANT_GUIDE.md  N8N_INSTAGRAM_TOOL_SETUP.md  PRECISE_MIGRATION_GUIDE.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README-V2.md  README.md  REFACTOR_SUMMARY.md  RESEARCH_REALTIME_FEEDBACK.md  STAGING_SETUP_GUIDE.md  START_HERE.md  Voice Guidelines — Jason Cooperson.md  YOUR_TODO_LIST.md  diagnose-chatkit.sh  fix-chatkit.sh  nixpacks.toml  openai-agentkit-chatkit-docs.md  package-lock.json  package-v2.json  package.json  (+5 more)
.archive/: AGENT_IMPROVEMENTS.md  CHATKIT_FIX.md  DEPLOYMENT_FIX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN_REALTIME.md  IMPLEMENTATION_RECOMMENDATIONS.md  PRODUCTION_TEST_REPORT.md  (+2 more)
backend/: pyproject.toml  requirements.txt
backend-v2/: .gitignore  CHATGPT_ARCHITECTURE_IMPLEMENTATION.md  HANDOFF_REFACTOR_SUMMARY.md  LATENCY_OPTIMIZATIONS.md  README.md  pyproject.toml  requirements.txt  requirements.txt.backup.20251009_173059
backend-v2/app/: ai_sdk_endpoint.py  guardrails.py  jason_agent.py  main.py  memory_store.py
backend/app/: main.py
(+72 files in other folders)
