[project]
name = "chatkit-backend-v2"
version = "0.2.0"
description = "FastAPI backend service for ChatKit v2"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "openai>=1.107.1",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.3",
    "openai-agents>=0.3.3",
    "openai-chatkit>=0.0.1",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
