[project]
name = "chatkit-backend"
version = "0.1.0"
description = "FastAPI backend service for ChatKit"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "openai==1.54.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "pydantic==2.5.3",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
